--- a/style.css
+++ b/style.css
@@ -1,9 +1,44 @@
+body {
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+}
+
 h1 {
     font-size: 50px;
-    font-family: 'Poppins', sans-serif;
     font-weight: 700px;
 }
 
 .name-highlight {
     color: #ffa500;
+}
+
+section {
+    display: flex;
+}
+
+.half-width {
+    width: 50%;
+    padding-left: 28px;
+    margin-left: 69px;
+}
+
+.half-width img {
+    width: 80%;
+}
+
+.link-button {
+    text-decoration: none;
+    cursor: pointer;
+    padding: 10px 40px;
+    font-size: 16px;
+    color: white;
+    background-image: linear-gradient(orange, tomato);
+    border-radius: 5px;
+    font-weight: 700px;
+}
+
+.top-banner {
+    background-image: url(/images/top-banner.png);
+    padding-bottom: 150px;
+    background-repeat: no-repeat;
 }
