--- a/style.css
+++ b/style.css
@@ -8,11 +8,15 @@ h1 {
     font-weight: 700px;
 }
 
+h2 {
+    font-size: 40px;
+}
+
 .name-highlight {
     color: #ffa500;
 }
 
-section {
+.flexible-container {
     display: flex;
     margin-bottom: 150px;
 }
@@ -47,4 +51,18 @@ section {
     background-image: url(/images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+
+.exp-item {
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    border-radius: 10px;
+    box-shadow: 5px 7px 40px gray;
+}
+
+.experience {
+    background-image: url(/images/exp-bg.png);
+    background-repeat: no-repeat;
 }
