--- a/style.css
+++ b/style.css
@@ -60,9 +60,26 @@ h2 {
     padding-left: 20px;
     border-radius: 10px;
     box-shadow: 5px 7px 40px gray;
+    border-left: black;
 }
 
 .experience {
     background-image: url(/images/exp-bg.png);
     background-repeat: no-repeat;
+}
+
+#right-border {
+    border-left: 7px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+}
+
+#left-border {
+    border-left: 7px solid;
+    border-image: linear-gradient(salmon, tomato);
+    border-image-slice: 1;
+}
+
+footer p {
+    text-align: center;
 }
