--- a/style.css
+++ b/style.css
@@ -43,12 +43,12 @@ h2 {
 }
 
 .top-banner {
-    background-image: url(/images/top-banner.png);
+    background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
 }
 
 .dream-big {
-    background-image: url(/images/dream-bg.png);
+    background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
 }
@@ -64,7 +64,7 @@ h2 {
 }
 
 .experience {
-    background-image: url(/images/exp-bg.png);
+    background-image: url(images/exp-bg.png);
     background-repeat: no-repeat;
 }
 
